@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2025  Hybird
+#    Copyright (C) 2009-2026  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -20,6 +20,7 @@ from django.db.transaction import atomic
 from django.http import HttpResponse
 from django.shortcuts import get_object_or_404
 from django.utils.decorators import method_decorator
+from django.utils.translation import gettext
 from django.utils.translation import gettext_lazy as _
 
 from creme.creme_core.core.exceptions import ConflictError
@@ -114,6 +115,9 @@ class PaymentInformationAsDefault(generic.base.EntityRelatedMixin, generic.Check
     @method_decorator(workflow_engine)
     def post(self, request, *args, **kwargs):
         pi = self.get_payment_information()
+        if pi.archived:
+            raise ConflictError(gettext('This account is archived'))
+
         billing_doc = self.get_related_entity()
 
         if FieldsConfig.objects.get_for_model(
