@@ -43,6 +43,7 @@
             - You can now export several Invoices or Quotes at once, as a .zip archive.
             - In list-views, the columns for "Total with VAT" & "Total without VAT" display the
               Sum & Average values for these fields (on all entities related to the list).
+            - Payment information can now be archived (to avoid them to be used in new billing documents).
         * Opportunities :
             - In list-views, the columns for "Estimated sales" & "Made sales" display the
               Sum & Average values for these fields (on all entities related to the list).
